syntax = "proto3";
package com.odc.companyservice.v1;

option java_multiple_files = true;
option java_package = "com.odc.companyservice.v1";
option java_outer_classname = "CompanyServiceProto";

service CompanyService {
  rpc GetCompanyByUserId(GetCompanyByUserIdRequest) returns (GetCompanyByUserIdResponse);
  rpc GetCompanyById(GetCompanyByIdRequest) returns (GetCompanyByIdResponse);
  rpc GetCompaniesByIds(GetCompaniesByIdsRequest) returns (GetCompaniesByIdsResponse);
  rpc GetCompaniesInfoByIds(GetInfoCompanyByCompanyIdsRequest) returns (GetInfoCompanyByCompanyIdsResponse);
}

message GetCompanyByUserIdRequest {
  string userId = 1;
}

message GetCompanyByUserIdResponse {
  string companyId = 1;
  string companyName = 2;
}

message GetCompanyByIdRequest {
  string company_id = 1;
}

message GetCompanyByIdResponse {
  string company_name = 1;
  string contact_person_email = 2;
  string user_id = 3;
}

message GetCompaniesByIdsRequest {
  repeated string company_ids = 1;
}

message GetCompaniesByIdsResponse {
  map<string, string> company_names = 1;
}

message GetInfoCompanyByCompanyIdsRequest {
  repeated string ids = 1;
}

message GetInfoCompanyByCompanyIdsResponse {
  map<string, CompanyInfo> data = 1;
}

message CompanyInfo {
  string company_name = 1;
  string company_email = 2;
  string company_logo = 3;
  string user_id = 4;
}